<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/blocks_nav_"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/main_background">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">
                <TextView
                    style="@style/title_text_21"
                    android:id="@+id/main_title"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/main_text" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:id="@+id/frame_24"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_24"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/doors_title"
                        style="@style/title_text_17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:text="@string/cameras_title" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frame_23"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_23"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/cameras_title"
                        style="@style/title_text_17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/doors_title" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fabric"
        android:layout_width="2250dp"
        android:layout_height="1437dp"
        android:layout_marginTop="65dp">
        <LinearLayout
            android:id="@+id/door_tab"
            android:layout_width="match_parent"
            android:layout_height="647dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="333dp"
                android:layout_height="72dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/main_background_radius"
                android:elevation="3dp"
                android:layout_gravity="center">

                <TextView
                    style="@style/element_text_17"
                    android:id="@+id/element"
                    android:layout_width="87dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="top"
                    android:text="@string/element_name" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/blocks_pad_"
                android:layout_width="333dp"
                android:layout_height="279dp"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@drawable/main_background_radius">

                <RelativeLayout
                    android:id="@+id/group_190"
                    android:layout_width="333dp"
                    android:layout_height="207dp">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/avatars" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/group_192"
                    android:layout_width="333dp"
                    android:layout_height="72dp">
                    <RelativeLayout
                        android:id="@+id/group_191"
                        android:layout_width="87dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true">
                        <TextView
                            style="@style/element_text_17"
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"/>
                        <TextView
                            style="@style/status"
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:text="@string/status"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/icons_doors"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"
                        android:background="@color/main_elements_color">

                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>